# CitySense

./: CMakeLists.txt  README.md
api/: package-lock.json  package.json  server.js
backend/: ApiMain.cpp  CMakeLists.txt
backend/core/: CMakeLists.txt  CoreEngineService.cpp  CoreEngineService.h  EmergencyManager.cpp  EmergencyManager.h  GraphManager.cpp  GraphManager.h  TimeSeriesManager.cpp  TimeSeriesManager.h
backend/simulation/: CMakeLists.txt  ParkingManager.cpp  ParkingManager.h  TrafficController.cpp  TrafficController.h  UndoStack.cpp  UndoStack.h  VehicleSimulator.cpp  VehicleSimulator.h
frontend/: package-lock.json
frontend/src/: App.css  App.js  MapView.js
